Remove wheel event handling of <input type="number"> https://bugs.webkit.org/show_bug.cgi?id=244240 rdar://99318505

Reviewed by Simon Fraser.

This behavior does not match Apple platform behavior and is confusing
to end users. Web developers also frequently seek to disable it or
inadvertently enable it.

* LayoutTests/fast/forms/number/number-wheel-event-expected.txt: Removed.
* LayoutTests/fast/forms/number/number-wheel-event.html: Removed.
* LayoutTests/fast/forms/resources/common-wheel-event.js: Removed.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::forwardEvent):
(WebCore::TextFieldInputType::shouldSpinButtonRespondToWheelEvents const): Deleted.
* Source/WebCore/html/TextFieldInputType.h:
* Source/WebCore/html/shadow/SpinButtonElement.cpp:
(WebCore::SpinButtonElement::forwardEvent): Deleted.
* Source/WebCore/html/shadow/SpinButtonElement.h:

Canonical link: https://commits.webkit.org/289285@main