Source/WebCore/html/TextFieldInputType.h
@@ -105,7 +105,6 @@ private:
     // SpinButtonOwner functions.
     void focusAndSelectSpinButtonOwner() final;
     bool shouldSpinButtonRespondToMouseEvents() const final;
-    bool shouldSpinButtonRespondToWheelEvents() const final;
     void spinButtonStepDown() final;
     void spinButtonStepUp() final;
 
